--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,8 @@
 {
   "extends": [
-    "airbnb-base",
-    "plugin:import/recommended"
+    "airbnb-base"
   ],
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
   "rules": {
-    "no-console": "off",
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "import/extensions": "off",
-    "import/prefer-default-export": "off",
-    "linebreak-style":"off"
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
   }
 }
