--- a/package.json
+++ b/package.json
@@ -20,9 +20,17 @@
   },
   "homepage": "https://github.com/ulkerei/express-mesto-gha#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "celebrate": "^15.0.1",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
+    "escape-html": "^1.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.7.2"
+    "helmet": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "^8.27.0",
